--- a/src/bag.css
+++ b/src/bag.css
@@ -5,7 +5,7 @@ body {
   font-family: "Cabin", sans-serif;
 }
 
-.row {
+.bag-items .row {
   background: #fff;
   border-radius: 21px;
   /* width: fit-content; */
@@ -37,11 +37,6 @@ h3 {
   margin-right: 15px;
 }
 
-.col {
-  background: #af9f9f;
-  margin: 10px;
-  padding: 10px;
-}
 .qua {
   padding: 0;
   margin: 0;
