--- a/src/sidebag.css
+++ b/src/sidebag.css
@@ -1,16 +1,16 @@
 .side-bag {
+  width: 250px;
+  background-color: #f8f9fa;
+  padding: 120px 15px 15px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: fixed;
   top: 0;
   right: 0;
-  width: 300px;
-  background: #fff;
-  padding: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.side-bag ul {
-  list-style: none;
-  padding: 0;
+  height: 100vh;
+  margin-left: 5rem;
+  border-left: 3px solid #ccc;
 }
 
 .side-bag li {
@@ -22,4 +22,15 @@
   width: 50px;
   height: 50px;
   margin-right: 10px;
+}
+
+.item-images-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item-image {
+  width: 30%;
+  margin: 1%;
+  box-sizing: border-box;
 }
