--- a/src/sidebag.css
+++ b/src/sidebag.css
@@ -1,6 +1,6 @@
 .side-bag {
-  width: 250px;
-  background-color: #ededed;
+  width: 15rem;
+  background-color: #fff;
   padding: 120px 15px 15px 15px;
   display: flex;
   flex-direction: column;
